compiler-core/src/go/tests/snapshots/gleam_core__go__tests__bit_arrays__not_byte_aligned_explicit_sized.snap
---
source: compiler-core/src/go/tests/bit_arrays.rs
assertion_line: 763
expression: "\nfn go() {\n  <<256:size(4)>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  <<256:size(4)>>
}


----- ERROR
error: Unsupported feature for compilation target
  ┌─ /src/go/error.gleam:3:5
  │
3 │   <<256:size(4)>>
  │     ^^^^^^^^^^^

Non byte aligned array is not supported for Go compilation.
