compiler-core/src/go/tests/snapshots/gleam_core__go__tests__bit_arrays__utf8.snap
---
source: compiler-core/src/go/tests/bit_arrays.rs
expression: "\nfn go(x) {\n  <<256, 4, x, \"Gleam\":utf8>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(x) {
  <<256, 4, x, "Gleam":utf8>>
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ(x gleam_P.Int_t) gleam_P.BitArray_t {
  return gleam_P.ToBitArray(
    []byte{0},
    []byte{4},
    []byte{byte(x)},
    gleam_P.StringBits("Gleam"),
  )
}
